# terminal-bridge-v2

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  SESSION_NOTE.md  SUPPORT.md  pyproject.toml  readme.mf  requirements.txt
.github/: dependabot.yml  pull_request_template.md
docs/: 5hr-development-plan-2026-04-22.zh-TW.md  ai-orchestration.md  ai-orchestration.zh-TW.md  architecture-1-plus-n-expansion-plan.zh-TW.md  comparison-vs-acpx.md  control-console.md  control-console.zh-TW.md  development-book-round1-2026-04-22.zh-TW.md  development-execution-plan.zh-TW.md  devils-advocate-review.zh-TW.md  external-review-round1-2026-04-22.zh-TW.md  faq.md  faq.zh-TW.md  gemini-readme-workflow.zh-TW.md  getting-started.md  getting-started.zh-TW.md  governance-layering.md  governance-layering.zh-TW.md  gui-clarify-improvement-plan.zh-TW.md  gui-continuous-development-book.zh-TW.md  gui-development-rounds.zh-TW.md  mcp-client-setup.md  mcp-client-setup.zh-TW.md  overnight-loop-2026-04-24.zh-TW.md  p1-external-review-brief.zh-TW.md  phase-1-3-delivery-report-2026-04-10.zh-TW.md  phase-10-delivery-report-2026-04-11.zh-TW.md  phase-4-5-delivery-report-2026-04-10.zh-TW.md  phase-6-delivery-report-2026-04-10.zh-TW.md  phase-7-delivery-report-2026-04-10.zh-TW.md  phase-8-delivery-report-2026-04-10.zh-TW.md  phase-9-delivery-report-2026-04-10.zh-TW.md  platform-behavior.md  platform-behavior.zh-TW.md  project-loop-8hr-2026-04-26.zh-TW.md  project-status-report-2026-04-10.zh-TW.md  release-objection-report.zh-TW.md  remediation-plan.zh-TW.md  roadmap.md  roadmap.zh-TW.md  (+10 more)
examples/: governance.layers.sample.json
schemas/: governance.layers.schema.json
scripts/: capture_tb2_screenshot.ps1
tb2/: __init__.py  __main__.py  audit.py  backend.py  broker.py  cli.py  diff.py  governance.py  gui.py  intervention.py  osutils.py  pipe_backend.py  process_backend.py  profile.py  room.py  security.py  server.py  service.py  sidepanel.py  status.py  support.py  workstream.py
tests/: conftest.py  test_audit.py  test_backend.py  test_cli.py  test_diff.py  test_e2e.py  test_governance.py  test_health_cron_installer.py  test_intervention.py  test_osutils.py  (+11 more)
(+15 files in other folders)
