[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-bridge-v2"
version = "0.2.0"
description = "Operator-grade local-first orchestration and governance for terminal-native multi-agent workflows"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["terminal", "mcp", "ai", "orchestration", "tmux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/pingqLIN/terminal-bridge-v2"
Documentation = "https://github.com/pingqLIN/terminal-bridge-v2#readme"
Changelog = "https://github.com/pingqLIN/terminal-bridge-v2/blob/main/CHANGELOG.md"
Issues = "https://github.com/pingqLIN/terminal-bridge-v2/issues"

[project.optional-dependencies]
windows = ["pywinpty>=0.5.4"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
tb2 = "tb2.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["e2e: end-to-end tests requiring real tmux"]
